Update blog listing pages

--- a/blog-3.html
+++ b/blog-3.html
@@ -31,14 +31,14 @@ permalink: /blog-3/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Page 3 | Sybiltec Web Design</title>       
-        <meta name="Description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues.">
+        <title>Blog Page 3 | News and Updates | Sybiltec</title>       
+        <meta name="Description" content="Sybil Mayard is a web designer and digital consultant supporting small business owners. Read my articles advice on web design and other digital issues.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog-3/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog Page 3 | Sybiltec Web Design" />
-        <meta property="og:description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues." />
+        <meta property="og:title" content="Blog Page 3 | News and Updates | Sybiltec" />
+        <meta property="og:description" content="Sybil Mayard is a web designer and digital consultant supporting small business owners. Read my articles advice on web design and other digital issues." />
         <meta property="og:url" content="https://sybiltec.com/blog-3/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -172,51 +172,53 @@ permalink: /blog-3/
                         Sybiltec's Blog Page 3
                     </li>
                 </ol>
+                <div class="padding-top padding-bottom">
                     <h2>The Web Design Process Explained in 12 Easy Steps</h2>
-                    <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
+                    <p class="blog-excerpt">Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process >></a>
-                <div class="padding-top">
+                    <a class="btn-secondary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process</a>
+                    </div>
+                <div class="padding-top padding-bottom">
                     <h2>A Guide to Updating Your WordPress Website</h2>
-                    <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
+                    <p class="blog-excerpt">If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">Update WordPress >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">Update WordPress</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
-                    <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
+                    <p class="blog-excerpt">Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>The Importance of Contact Information on Your Website</h2>
-                    <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
+                    <p class="blog-excerpt">Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>How Does a Good Website Showcase Trust?</h2>
-                    <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
+                    <p class="blog-excerpt">According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">Create a Trustworthy Website >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">Create a Trustworthy Website</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>7 Reasons Why You Should be Using Shopify</h2>
-                    <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
+                    <p class="blog-excerpt">Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
                         <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/6-reasons-to-use-shopify/">Use Shopify Now >></a>
+                        <a class="btn-secondary" href="https://sybiltec.com/6-reasons-to-use-shopify/">Use Shopify Now</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>5 Best Tools for Remote Working</h2>
-                    <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
+                    <p class="blog-excerpt">With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
                         <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/5-best-tools-for-remote-working/">Remote Working Tools >></a>
+                        <a class="btn-secondary" href="https://sybiltec.com/5-best-tools-for-remote-working/">Remote Working Tools</a>
                 </div>
                 <div class="padding-top padding-bottom">
                     <h2>6 Tips for Surviving Remote Working</h2>
-                    <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
+                    <p class="blog-excerpt">Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
                         <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Survive Remote Working >></a>
+                        <a class="btn-secondary" href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Survive Remote Working</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog/">Page 1</a> | <a href="https://sybiltec.com/blog-2/">Page 2</a></div>
             </div>
