--- a/blog.html
+++ b/blog.html
@@ -31,14 +31,14 @@ permalink: /blog/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Page 1 | Sybiltec Web Design</title>       
-        <meta name="Description" content="Sybiltec provides website design services in the South East London areaa. Read our blog posts to keep yourself updated with industry news and company updates.">
+        <title>Blog Page 1 | News and Updates | Sybiltec</title>       
+        <meta name="Description" content="I provide web design and digital consulting services to small businesses. Read my blog posts to keep updated with industry news and company updates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog Page 1 | Sybiltec Web Design" />
-        <meta property="og:description" content="Sybiltec provides website design services in the South East London areaa. Read our blog posts to keep yourself updated with industry news and company updates." />
+        <meta property="og:title" content="Blog Page 1 | News and Updates | Sybiltec" />
+        <meta property="og:description" content="I provide web design and digital consulting services to small businesses. Read my blog posts to keep updated with industry news and company updates." />
         <meta property="og:url" content="https://sybiltec.com/blog/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -172,63 +172,65 @@ permalink: /blog/
                         Sybiltec's Blog
                     </li>
                 </ol>
-                <h2>New Websites Launched in 2025</h2>
-                    <p>We are pleased to announce the launch of several new websites in 2025! We've been very busy helping small businesses improve their online presence. View our latest projects here. …</p>
+                <div class="padding-top padding-bottom">
+                    <h2>New Websites Launched in 2025</h2>
+                    <p class="blog-excerpt">We are pleased to announce the launch of several new websites in 2025! We've been very busy helping small businesses improve their online presence. View our latest projects here. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/new-websites-2025/">See New Websites >></a>
-                <div class="padding-top">
+                    <a class="btn-secondary" href="https://sybiltec.com/new-websites-2025/">See New Websites</a>
+                </div>
+                <div class="padding-top padding-bottom">
                     <h2>Free Workshops for Greenwich Borough</h2>
-                    <p>We are pleased to be running a new series of free workshops for businesses and organisations based in the Royal Borough of Greenwich. Attend our workshops to learn the vital skills and strategies you need to succeed. …</p>
-                        <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/free-workshops-greenwich-borough/">Register Now >></a>
+                    <p class="blog-excerpt">We are pleased to be running a new series of free workshops for businesses and organisations based in the Royal Borough of Greenwich. Attend our workshops to learn the vital skills and strategies you need to succeed. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/free-workshops-greenwich-borough/">Register Now</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>Thriving Through Change: Smart Website Strategies for Small Business Success</h2>
-                    <p>In the digital age, a well-optimised website is more than just a business card; it's a powerful tool to ensure the success and resilience of your business during uncertain times. We explore the critical strategies that can transform your website into a robust platform for growth. …</p>
-                        <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Explore Website Strategies >></a>
+                    <p class="blog-excerpt">In the digital age, a well-optimised website is more than just a business card; it's a powerful tool to ensure the success and resilience of your business during uncertain times. We explore the critical strategies that can transform your website into a robust platform for growth. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Explore Website Strategies</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>A Quick Guide to Website Compliance</h2>
-                    <p>Is your website compliant? As a business owner, there are certain legal requirements that your website must meet. In this article, we discuss accessibility regulations (WCAG), data protection regulations (GDPR) and other UK laws. …</p>
+                    <p class="blog-excerpt">Is your website compliant? As a business owner, there are certain legal requirements that your website must meet. In this article, we discuss accessibility regulations (WCAG), data protection regulations (GDPR) and other UK laws. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Is Your Website Compliant? >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Is Your Website Compliant?</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>Cyber Security Best Practices for Business</h2>
-                    <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips and advice in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. …</p>
+                    <p class="blog-excerpt">Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips and advice in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure My Business >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure My Business</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>8 Ways to Speed Up Your Windows PC</h2>
-                        <p>It can be frustrating to deal with a slow computer. But if you're tempted to throw it away, first consider these 8 things you can try in order to speed it up! …</p>
-                        <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">Speed Up My PC >></a>
+                    <p class="blog-excerpt">It can be frustrating to deal with a slow computer. But if you're tempted to throw it away, first consider these 8 things you can try in order to speed it up! …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">Speed Up My PC</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>9 Ways to Improve the UX (User Experience) of Your Website</h2>
-                    <p>User experience (or UX) is all about how your website visitors feel when they are browsing your website. Is it a positive or negative experience? Do they feel happy and satisfied, or angry and frustrated? Read the article for 8 ways to improve your website's user experience. …</p>
+                    <p class="blog-excerpt">User experience (or UX) is all about how your website visitors feel when they are browsing your website. Is it a positive or negative experience? Do they feel happy and satisfied, or angry and frustrated? Read the article for 8 ways to improve your website's user experience. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/user-experience-ux/">Improve My UX >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/user-experience-ux/">Improve My UX</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>Accessible Design: Creating an Inclusive Website</h2>
-                    <p>Designing an accessible website means creating web content that's usable for all types of users, including those with impairments and disabilities. Read the article for simple tips on how to make your website more accessible …</p>
+                    <p class="blog-excerpt">Designing an accessible website means creating web content that's usable for all types of users, including those with impairments and disabilities. Read the article for simple tips on how to make your website more accessible …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/accessible-website-design/">Accessible Website Design >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/accessible-website-design/">Accessible Website Design</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>How to Use Google Search Console: a Quick Guide</h2>
-                    <p>Improving your website's SEO begins with understanding the search performace of your site. Read this guide on how to create a property, view your metrics, fix page indexing issues and more. …</p>
+                    <p class="blog-excerpt">Improving your website's SEO begins with understanding the search performace of your site. Read this guide on how to create a property, view your metrics, fix page indexing issues and more. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/google-search-console/">Use Google Search Console >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/google-search-console/">Use Google Search Console</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>10 Best Free WordPress Plugins</h2>
-                    <p>WordPress is one of the most popular website builder platforms on the internet. One reason why is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. …</p>
+                    <p class="blog-excerpt">WordPress is one of the most popular website builder platforms on the internet. One reason why is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/best-free-wordpress-plugins/">Best WordPress Plugins >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/best-free-wordpress-plugins/">Best WordPress Plugins</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
