--- a/blog-2.html
+++ b/blog-2.html
@@ -31,14 +31,14 @@ permalink: /blog-2/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Page 2 | Sybiltec Web Design</title>       
-        <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read our blog posts to learn about the latest industry news and company updates.">
+        <title>Blog Page 2 | News and Updates | Sybiltec</title>       
+        <meta name="Description" content="Sybil Mayard provides web design & digital services to SMEs. Read my blog posts to learn about the latest industry news and company updates from Sybiltec.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog-2/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog Page 2 | Sybiltec Web Design" />
-        <meta property="og:description" content="Sybiltec provides website development and e-commerce services for SMEs. Read our blog posts to learn about the latest industry news and company updates." />
+        <meta property="og:title" content="Blog Page 2 | News and Updates | Sybiltec" />
+        <meta property="og:description" content="Sybil Mayard provides web design & digital services to SMEs. Read my blog posts to learn about the latest industry news and company updates from Sybiltec." />
         <meta property="og:url" content="https://sybiltec.com/blog-2/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -172,63 +172,65 @@ permalink: /blog-2/
                         Sybiltec's Blog Page 2
                     </li>
                 </ol>
+                <div class="padding-top padding-bottom">
                     <h2>10 Common Website Mistakes and How to Avoid Them</h2>
-                    <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
+                    <p class="blog-excerpt">Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/common-website-mistakes/">Avoid the Mistakes >></a>
-                <div class="padding-top">
+                    <a class="btn-secondary" href="https://sybiltec.com/common-website-mistakes/">Avoid the Mistakes</a>
+                </div>
+                <div class="padding-top padding-bottom">
                     <h2>How to Choose a Web Designer</h2>
-                    <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
+                    <p class="blog-excerpt">Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/how-to-choose-web-designer/">Choose a Web Designer >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/how-to-choose-web-designer/">Choose a Web Designer</a>
                 </div>
-               <div class="padding-top">
+               <div class="padding-top padding-bottom">
                     <h2>How to Improve the SEO of Your Website</h2>
-                        <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
-                        <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO >></a>
+                    <p class="blog-excerpt">One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO</a>
                </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
-                    <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
+                    <p class="blog-excerpt">Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">Backup Your Website >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">Backup Your Website</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
-                    <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
+                    <p class="blog-excerpt">A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/fix-slow-wordpress-website/">Fix My Site! >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/fix-slow-wordpress-website/">Fix My Site!</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>How to Install GA4 on Your WordPress Website</h2>
-                    <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
+                    <p class="blog-excerpt">Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-wordpress-website/">Install GA4 on WordPress >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-wordpress-website/">Install GA4 on WordPress</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>How to Install GA4 on Your Wix Website</h2>
-                    <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
+                    <p class="blog-excerpt">Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-wix-website/">Install GA4 on Wix >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-wix-website/">Install GA4 on Wix</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>How to Install GA4 on Your Shopify Website</h2>
-                    <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
+                    <p class="blog-excerpt">You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-shopify-website/">Install GA4 on Shopify >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-shopify-website/">Install GA4 on Shopify</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>How Do I Upgrade to Google Analytics 4?</h2>
-                    <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The previous version, Universal Analytics, stopped processing new data on 1st July 2023, so you need to upgrade to GA4 if you have not yet done so. Not sure which version of Google …</p>
+                    <p class="blog-excerpt">If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The previous version, Universal Analytics, stopped processing new data on 1st July 2023, so you need to upgrade to GA4 if you have not yet done so. Not sure which version of Google …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/upgrade-google-analytics-4/">Upgrade GA Now >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/upgrade-google-analytics-4/">Upgrade GA Now</a>
                 </div>
-                <div class="padding-top">
+                <div class="padding-top padding-bottom">
                     <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
-                    <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
+                    <p class="blog-excerpt">If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
                     <br>
-                <a class="btn-secondary" href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce >></a>
+                <a class="btn-secondary" href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog/">Page 1</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
